--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,34 @@
+/* apply to all <elements> */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* apply style to body */
+
 body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* apply styles to <header> */
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header span {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +36,23 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
-a {
+header a {
     color: #ffffff;
     text-decoration: none;
-}
-
-p {
     font-size: 16px;
 }
 
+section {
+    padding: 60px;
+    color: #39a6b2 ;
+}
+
+/* Hero Style Start */
 .hero {
     height: 800px;
     width: 100%;
