--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     margin: 0;
 }
 
-/* apply style to body */
+/* apply style to <body> */
 
 body {
     background-color: #d9dcd6;
@@ -41,7 +41,7 @@ header nav ul li {
     margin-left: 25px;
 }
 
-header a {
+header nav ul li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 16px;
@@ -53,7 +53,7 @@ section {
 }
 
 /* Hero Style Start */
-.hero {
+.hero-img {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
