--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ section {
 /* Benefits Style Begins */
 .benefits {
     margin-right: 20px;
+    margin-top: -640px;
     padding: 20px;
     clear: both;
     float: right;
