--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
-/* apply to all <elements> */
+/* Apply style to all <elements> */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-/* apply style to <body> */
+/* Apply style to <body> */
 
 body {
     background-color: #d9dcd6;
 }
 
-/* apply styles to <header> */
+/* Apply styles to <header> */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -52,7 +52,7 @@ section {
     color: #39a6b2 ;
 }
 
-/* Hero Style Start */
+/* Hero Image Style Start */
 .hero-img {
     height: 800px;
     width: 100%;
@@ -61,16 +61,9 @@ section {
     background-size: cover;
     background-position: center;
 }
+/* Hero Image Style End */
 
-/* Hero Style End */
-
-/* Search Engine, Online, Social Media Style Start */
-.capabilities {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
+/* Search Engine Optimization, Online Reputation, Social Media Style Start */
 .content {
     margin-bottom: 20px;
     padding: 50px;
@@ -78,6 +71,9 @@ section {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
 }
 
 .float-left {
@@ -88,6 +84,7 @@ section {
 .float-right {
     float: right;
     margin-left: 25px;
+    max-height: 200px;
 }
 
 .content img {
@@ -98,9 +95,9 @@ section {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* Search Engine, Online, Social Media Style End*/
+/* Search Engine Optimization, Online Reputation, Social Media Style End*/
 
-/* Benefits Style Begins */
+/* Benefits Style Start */
 .benefits {
     margin-right: 20px;
     margin-top: -640px;
@@ -117,7 +114,6 @@ section {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-type h3 {
     margin-bottom: 10px;
     text-align: center;
